force-app/main/default/objects/Weight_Log__c/Weight_Log__c.object-meta.xml
<CustomObject>
    <label>Weight Log</label>
    <nameField>
        <displayFormat>WL-{00000000}</displayFormat>
        <label>Weight Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weight Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>