force-app/main/default/objects/Weight_Log__c/fields/Health_Profile1__c.field-meta.xml
<CustomField>
    <fullName>Health_Profile1__c</fullName>
    <label>Health Profile</label>
    <referenceTo>Health_Profile__c</referenceTo>
    <relationshipLabel>Weight Logs</relationshipLabel>
    <relationshipName>Weight_Logs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>