force-app/main/default/objects/Weight_Log__c/fields/Health_Profile__c.field-meta.xml
<CustomField>
    <fullName>Health_Profile__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot; &amp; Daily_Record_Log__r.Health_Profile__r.Id,
Daily_Record_Log__r.Health_Profile__r.First_Name__c &amp; &quot; &quot; &amp;
Daily_Record_Log__r.Health_Profile__r.Last_Name__c,
&quot;_blank&quot;
)</formula>
    <label>Health Profile</label>
    <type>Text</type>
</CustomField>