force-app/main/default/objects/Weight_Log__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <defaultValue>TIMENOW()</defaultValue>
    <label>Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>