force-app/main/default/objects/Weight_Log__c/fields/Weight_Source__c.field-meta.xml
<CustomField>
    <fullName>Weight_Source__c</fullName>
    <label>Weight Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>